feat: Add Real-Time Collaborative Watchlist foundation (WIP)
Backend Implementation (70% Complete):
- Database schema with 5 tables and indexes
- Watchlist and notification models (26 functions total)
- Watchlist controller (9 endpoints)
- Notification controller (5 endpoints)
- REST API routes for watchlists and notifications
- WebSocket server with Socket.io
- JWT authentication for WebSocket connections
- Room-based presence tracking

Features Implemented:
- Create/read/update/delete watchlists
- Add/remove repositories to watchlists
- Manage collaborators
- Notification system with preferences
- Real-time presence indicators
- WebSocket event handling

Remaining Work:
- GitHub polling service
- Frontend UI (watchlist.html, CSS, JS)
- Complete WebSocket event handlers
- Documentation

Related to #143 (SWoC 2026 - Advanced - 200 points)

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "node-cron": "^3.0.3",
+    "socket.io": "^4.7.4",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
